Test: DeepfakeDetectionServiceTest, ControllerTest에 userId param 추가 및 특정 탐지 조회 테스트 추가